--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,7 @@
       "request": "launch",
       "type": "cortex-debug",
       "servertype": "openocd",
+      "runToMain": true,
       "armToolchainPath": "${workspaceRoot}/build",
       "configFiles": [
         "${workspaceRoot}/openocd.cfg"
