--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,35 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "debug-deps",
+      "label": "debug-deps-blue",
       "type": "shell",
-      "command": "make debug-deps",
+      "command": "make -f blue.mk debug-deps",
+      "presentation": {
+        "echo": true,
+        "reveal": "silent",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": false
+      }
+    },
+    {
+      "label": "debug-deps-discovery",
+      "type": "shell",
+      "command": "make -f discovery.mk debug-deps",
+      "presentation": {
+        "echo": true,
+        "reveal": "silent",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": false
+      }
+    },
+    {
+      "label": "debug-deps-disco-s001",
+      "type": "shell",
+      "command": "make -f disco-s001.mk debug-deps",
       "presentation": {
         "echo": true,
         "reveal": "silent",
