--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,5 @@
     "editor.tabSize": 2,
     "editor.insertSpaces": true
   },
-  "editor.formatOnSave": true,
-  "files.associations": {
-    "stm8s_rst.h": "c"
-  },
+  "editor.formatOnSave": true
 }
