--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/stm8"]
 	path = lib/stm8
 	url = https://github.com/ryanplusplus/stm8s-header
+[submodule "lib/atomthreads"]
+	path = lib/atomthreads
+	url = https://github.com/kelvinlawson/atomthreads
