--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,19 @@
       }
     },
     {
+      "label": "debug-deps-blue-zumo",
+      "type": "shell",
+      "command": "make -f blue-zumo.mk debug-deps",
+      "presentation": {
+        "echo": true,
+        "reveal": "silent",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": false
+      }
+    },
+    {
       "label": "debug-deps-blue-atomic",
       "type": "shell",
       "command": "make -f blue-atomic.mk debug-deps",
