--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
     {
       "label": "debug-deps-blue",
       "type": "shell",
-      "command": "make -f blue.mk debug-deps",
+      "command": "make -j8 -f blue.mk debug-deps",
       "presentation": {
         "echo": true,
         "reveal": "silent",
@@ -19,7 +19,7 @@
     {
       "label": "debug-deps-blue-zumo",
       "type": "shell",
-      "command": "make -f blue-zumo.mk debug-deps",
+      "command": "make -j8 -f blue-zumo.mk debug-deps",
       "presentation": {
         "echo": true,
         "reveal": "silent",
@@ -32,7 +32,7 @@
     {
       "label": "debug-deps-blue-atomic",
       "type": "shell",
-      "command": "make -f blue-atomic.mk debug-deps",
+      "command": "make -j8 -f blue-atomic.mk debug-deps",
       "presentation": {
         "echo": true,
         "reveal": "silent",
@@ -45,7 +45,7 @@
     {
       "label": "debug-deps-black",
       "type": "shell",
-      "command": "make -f black.mk debug-deps",
+      "command": "make -j8 -f black.mk debug-deps",
       "presentation": {
         "echo": true,
         "reveal": "silent",
@@ -58,7 +58,7 @@
     {
       "label": "debug-deps-discovery",
       "type": "shell",
-      "command": "make -f discovery.mk debug-deps",
+      "command": "make -j8 -f discovery.mk debug-deps",
       "presentation": {
         "echo": true,
         "reveal": "silent",
@@ -71,7 +71,7 @@
     {
       "label": "debug-deps-nucleo",
       "type": "shell",
-      "command": "make -f nucleo.mk debug-deps",
+      "command": "make -j8 -f nucleo.mk debug-deps",
       "presentation": {
         "echo": true,
         "reveal": "silent",
