--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -61,18 +61,18 @@
       "preLaunchTask": "debug-deps-black"
     },
     {
-      "name": "Black Zumo",
+      "name": "Starduino Zumo",
       "cwd": "${workspaceRoot}",
-      "executable": "${workspaceFolder}/build/black-zumo/tiny-debug.elf",
+      "executable": "${workspaceFolder}/build/starduino-zumo/tiny-debug.elf",
       "request": "launch",
       "type": "cortex-debug",
       "servertype": "openocd",
       "runToMain": true,
-      "armToolchainPath": "${workspaceRoot}/build/black-zumo",
+      "armToolchainPath": "${workspaceRoot}/build/starduino-zumo",
       "configFiles": [
-        "${workspaceRoot}/build/black-zumo/openocd.cfg"
+        "${workspaceRoot}/build/starduino-zumo/openocd.cfg"
       ],
-      "preLaunchTask": "debug-deps-black-zumo"
+      "preLaunchTask": "debug-deps-starduino-zumo"
     },
     {
       "name": "Discovery",
