--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -115,6 +115,30 @@
         "${workspaceRoot}/build/w1209/openocd.cfg"
       ],
       "preLaunchTask": "debug-deps-w1209"
+    },
+    {
+      "name": "TDD",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/build/tiny_tests",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "osx": {
+        "MIMode": "lldb"
+      },
+      "linux": {
+        "MIMode": "gdb"
+      },
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ]
     }
   ]
 }
