--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -69,6 +69,19 @@
       }
     },
     {
+      "label": "debug-deps-black-zumo",
+      "type": "shell",
+      "command": "make -j8 -f black-zumo.mk debug-deps",
+      "presentation": {
+        "echo": true,
+        "reveal": "silent",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": false
+      }
+    },
+    {
       "label": "debug-deps-discovery",
       "type": "shell",
       "command": "make -j8 -f discovery.mk debug-deps",
