--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -106,6 +106,19 @@
         "showReuseMessage": true,
         "clear": false
       }
+    },
+    {
+      "label": "debug-deps-blue-207",
+      "type": "shell",
+      "command": "make -j8 -f blue-207.mk debug-deps",
+      "presentation": {
+        "echo": true,
+        "reveal": "silent",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": false
+      }
     }
   ]
 }
