--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -82,9 +82,22 @@
       }
     },
     {
-      "label": "debug-deps-nucleo",
+      "label": "debug-deps-nucleo-32",
       "type": "shell",
-      "command": "make -j8 -f nucleo.mk debug-deps",
+      "command": "make -j8 -f nucleo-32.mk debug-deps",
+      "presentation": {
+        "echo": true,
+        "reveal": "silent",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": false
+      }
+    },
+    {
+      "label": "debug-deps-nucleo-64",
+      "type": "shell",
+      "command": "make -j8 -f nucleo-64.mk debug-deps",
       "presentation": {
         "echo": true,
         "reveal": "silent",
