--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,150 +5,24 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Blue",
+      "name": "Target",
       "cwd": "${workspaceRoot}",
-      "executable": "${workspaceFolder}/build/blue/tiny-debug.elf",
+      "executable": "${workspaceFolder}/build/target/zumo-debug.elf",
       "request": "launch",
       "type": "cortex-debug",
       "servertype": "openocd",
       "runToMain": true,
-      "armToolchainPath": "${workspaceRoot}/build/blue",
+      "armToolchainPath": "${workspaceRoot}/build/target",
       "configFiles": [
-        "${workspaceRoot}/build/blue/openocd.cfg"
+        "${workspaceRoot}/build/target/openocd.cfg"
       ],
-      "preLaunchTask": "debug-deps-blue"
+      "preLaunchTask": "debug-deps-target"
     },
     {
-      "name": "Blue Zumo",
-      "cwd": "${workspaceRoot}",
-      "executable": "${workspaceFolder}/build/blue-zumo/tiny-debug.elf",
-      "request": "launch",
-      "type": "cortex-debug",
-      "servertype": "openocd",
-      "runToMain": true,
-      "armToolchainPath": "${workspaceRoot}/build/blue-zumo",
-      "configFiles": [
-        "${workspaceRoot}/build/blue-zumo/openocd.cfg"
-      ],
-      "preLaunchTask": "debug-deps-blue-zumo"
-    },
-    {
-      "name": "Blue Atomic",
-      "cwd": "${workspaceRoot}",
-      "executable": "${workspaceFolder}/build/blue-atomic/tiny-debug.elf",
-      "request": "launch",
-      "type": "cortex-debug",
-      "servertype": "openocd",
-      "runToMain": true,
-      "armToolchainPath": "${workspaceRoot}/build/blue-atomic",
-      "configFiles": [
-        "${workspaceRoot}/build/blue-atomic/openocd.cfg"
-      ],
-      "preLaunchTask": "debug-deps-blue-atomic"
-    },
-    {
-      "name": "Black",
-      "cwd": "${workspaceRoot}",
-      "executable": "${workspaceFolder}/build/black/tiny-debug.elf",
-      "request": "launch",
-      "type": "cortex-debug",
-      "servertype": "openocd",
-      "runToMain": true,
-      "armToolchainPath": "${workspaceRoot}/build/black",
-      "configFiles": [
-        "${workspaceRoot}/build/black/openocd.cfg"
-      ],
-      "preLaunchTask": "debug-deps-black"
-    },
-    {
-      "name": "Starduino Zumo",
-      "cwd": "${workspaceRoot}",
-      "executable": "${workspaceFolder}/build/starduino-zumo/tiny-debug.elf",
-      "request": "launch",
-      "type": "cortex-debug",
-      "servertype": "openocd",
-      "runToMain": true,
-      "armToolchainPath": "${workspaceRoot}/build/starduino-zumo",
-      "configFiles": [
-        "${workspaceRoot}/build/starduino-zumo/openocd.cfg"
-      ],
-      "preLaunchTask": "debug-deps-starduino-zumo"
-    },
-    {
-      "name": "Discovery",
-      "cwd": "${workspaceRoot}",
-      "executable": "${workspaceFolder}/build/discovery/tiny-debug.elf",
-      "request": "launch",
-      "type": "cortex-debug",
-      "servertype": "openocd",
-      "runToMain": true,
-      "armToolchainPath": "${workspaceRoot}/build/discovery",
-      "configFiles": [
-        "${workspaceRoot}/build/discovery/openocd.cfg"
-      ],
-      "preLaunchTask": "debug-deps-discovery"
-    },
-    {
-      "name": "Nucleo-32",
-      "cwd": "${workspaceRoot}",
-      "executable": "${workspaceFolder}/build/nucleo-32/tiny-debug.elf",
-      "request": "launch",
-      "type": "cortex-debug",
-      "servertype": "openocd",
-      "runToMain": true,
-      "armToolchainPath": "${workspaceRoot}/build/nucleo-32",
-      "configFiles": [
-        "${workspaceRoot}/build/nucleo-32/openocd.cfg"
-      ],
-      "preLaunchTask": "debug-deps-nucleo-32"
-    },
-    {
-      "name": "Nucleo-64",
-      "cwd": "${workspaceRoot}",
-      "executable": "${workspaceFolder}/build/nucleo-64/tiny-debug.elf",
-      "request": "launch",
-      "type": "cortex-debug",
-      "servertype": "openocd",
-      "runToMain": true,
-      "armToolchainPath": "${workspaceRoot}/build/nucleo-64",
-      "configFiles": [
-        "${workspaceRoot}/build/nucleo-64/openocd.cfg"
-      ],
-      "preLaunchTask": "debug-deps-nucleo-64"
-    },
-    {
-      "name": "W1209",
-      "cwd": "${workspaceRoot}",
-      "executable": "${workspaceFolder}/build/w1209/tiny-debug.elf",
-      "request": "launch",
-      "type": "cortex-debug",
-      "servertype": "openocd",
-      "runToMain": true,
-      "armToolchainPath": "${workspaceRoot}/build/w1209",
-      "configFiles": [
-        "${workspaceRoot}/build/w1209/openocd.cfg"
-      ],
-      "preLaunchTask": "debug-deps-w1209"
-    },
-    {
-      "name": "Blue 207",
-      "cwd": "${workspaceRoot}",
-      "executable": "${workspaceFolder}/build/blue-207/tiny-debug.elf",
-      "request": "launch",
-      "type": "cortex-debug",
-      "servertype": "openocd",
-      "runToMain": true,
-      "armToolchainPath": "${workspaceRoot}/build/blue-207",
-      "configFiles": [
-        "${workspaceRoot}/build/blue-207/openocd.cfg"
-      ],
-      "preLaunchTask": "debug-deps-blue-207"
-    },
-    {
-      "name": "TDD",
+      "name": "Test",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/build/tiny_tests",
+      "program": "${workspaceFolder}/build/zumo_tests",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
@@ -166,7 +40,8 @@
           "text": "-enable-pretty-printing",
           "ignoreFailures": true
         }
-      ]
+      ],
+      "preLaunchTask": "debug-deps-test"
     }
   ]
 }
