--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,5 @@
     "editor.tabSize": 2,
     "editor.insertSpaces": true
   },
-  "editor.formatOnSave": true,
-  "files.associations": {
-    "tuning.h": "c",
-    "tiny_utils.h": "c",
-    "cstdio": "c"
-  }
+  "editor.formatOnSave": true
 }
