--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,17 +7,18 @@
     {
       "name": "Target",
       "cwd": "${workspaceRoot}",
-      "executable": "${workspaceFolder}/build/target/zumo-debug.elf",
+      "executable": "${workspaceFolder}/build/zumo-debug.elf",
       "request": "launch",
       "type": "cortex-debug",
       "servertype": "openocd",
-      "serverpath": "${workspaceFolder}/build/target/openocd/bin/openocd",
+      "serverpath": "${workspaceFolder}/build/openocd/bin/openocd",
       "runToMain": true,
-      "armToolchainPath": "${workspaceRoot}/build/target",
+      "armToolchainPath": "${workspaceRoot}/build",
       "toolchainPrefix": "stm8",
       "configFiles": [
-        "${workspaceRoot}/build/target/openocd.cfg"
+        "${workspaceRoot}/build/openocd.cfg"
       ],
+      "svdFile": "build/zumo.svd",
       "preLaunchTask": "debug-deps-target"
     },
     {
